# idaas-python-core-alibabacloud-authentication-plugin

./: README.md  pyproject.toml
.github/workflows/: publish.yml
cloud_idaas/provider/plugin/: __init__.py  alibaba_cloud_plugin_credential_provider.py  audience_scope.py
samples/: plugin_sample.py
