[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-idaas-core-alibabacloud-authentication-plugin"
version = "0.0.1b0"
description = "Authentication plugin for IDaaS (Identity as a Service) core sdk"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["IDaaS", "IDaaS SDK"]
authors = [
    {name = "AlibabaCloud IDaaS Team", email = "cloudidaas@list.alibaba-inc.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "cloud-idaas-core>=0.0.2b0",
    "alibabacloud_eiam20211201>=2.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.900",
    "twine>=3.4.0",
    "build>=0.7.0",
]

[tool.setuptools]
packages = ["cloud_idaas.provider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = ["ignore::urllib3.exceptions.NotOpenSSLWarning"]

[project.entry-points."cloud_idaas.core.plugins"]
alibabacloudPluginCredentialProvider = "cloud_idaas.provider.plugin:AlibabaCloudPluginCredentialProvider"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313', 'py314']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["cloud_idaas"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120
